@@ -1,6 +1,8 @@
 Revision history for Perl extension URI::db.
 
 0.21
+     - Changed Oracle database DBI parameter name from `sid` to
+       `service_name`. Thanks to @vectro for the report (#22).
 
 0.20  2022-06-20T17:48:44Z
       - Added URI::cockroach and URI::yugabyte.
